# shuttle-qdrant-openai

./: Cargo.toml  README.md
src/: contents.rs  errors.rs  main.rs  open_ai.rs  vector.rs
